import no.nav.testnav.dependencies.gradle.DependenciesPlugin

plugins {
    id 'no.nav.testnav.dependencies'
    id 'java'
    id 'org.springframework.boot' version "2.5.5"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom  "org.springframework.cloud:spring-cloud-dependencies:${DependenciesPlugin.springCloud}"
    }
}

properties {
    compileJava.options.encoding = 'UTF-8'
}

bootJar {
    archiveFileName = "app.jar"
}

repositories {
    maven {
        url = uri('https://repo1.maven.org/maven2/')
    }
    mavenLocal()
    maven {
        name = "GitHubPackages"
        url = uri('https://maven.pkg.github.com/navikt/maven-release')
        credentials(PasswordCredentials) {
            password System.getenv("NAV_TOKEN")
            username 'token'
        }
    }
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-security'
    implementation 'no.nav.testnav.libs:database'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'

    implementation 'org.aspectj:aspectjweaver:1.9.6'
    implementation 'io.micrometer:micrometer-registry-prometheus:1.5.5'

    implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'
    implementation 'javax:javaee-api:8.0'
    implementation 'com.h2database:h2:1.4.200'

    implementation 'org.flywaydb:flyway-core:6.4.4'
    implementation 'org.postgresql:postgresql:42.2.16'
    implementation 'com.google.guava:guava:18.0'
    implementation 'ma.glasnost.orika:orika-core:1.5.4'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.6'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.9.6'
    implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
    implementation 'com.fasterxml.woodstox:woodstox-core:5.0.3'
    implementation 'no.nav.repository.fellesreg.tpsws:nav-repository-fellesregister-jaxb-tps-m201-domain:2020.08.27-09.53-183ead3d81eb'
    implementation "org.projectlombok:lombok:${DependenciesPlugin.lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${DependenciesPlugin.lombokVersion}"

    implementation "org.springdoc:springdoc-openapi-ui:${DependenciesPlugin.springdocOpenapi}"
    implementation "net.logstash.logback:logstash-logback-encoder:${DependenciesPlugin.logstashLogbackEncoder}"

    testImplementation 'junit:junit:4.12' //TODO upgrade to JUnit5
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'no.nav.testnav.libs:testing'
}

description = 'ident-pool'
